@@ -1,0 +1,11 @@
+# A bogus makefile that non-GNU make implementations will try to use.
+# This is better than messages like `make:105: missing separator **'.
+all: GNUmakefile
+	@echo "Compilation of this package requires GNU make ver 3.68 or above."
+	@echo "If you are using GNU make and it ignores the GNUmakefile in this"
+	@echo "directory, issue the command 'make -f GNUmakefile'"
+
+GNUmakefile: GNUmakefile.in
+	CONFIG_HEADERS= CONFIG_FILES=$@ ./config.status
+
+update install clean realclean distclean TAGS dist: all
